welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
while (!=estSurBiscuit)
       ^RunFour:7: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
while (!=estSurBiscuit)
       ^RunFour:12: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
while (!=estSurBiscuit)
       ^RunFour:18: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
while (!=estSurBiscuit)
       ^